# AtomVM

./: CHANGELOG.md
examples/elixir/: CMakeLists.txt  CompilerTest.ex  EvalTestWeb.ex  TokenizerTestWeb.ex
examples/emscripten/: elixir_test.html  eval_string.html  index.html  tokenizer_test.html
libs/estdlib/src/: CMakeLists.txt  application.erl  elixir.erl  elixir_compiler.erl  elixir_config.erl  elixir_dispatch.erl  elixir_env.erl  elixir_lexical.erl  elixir_module.erl  elixir_parser.erl  elixir_sup.erl  erlang.erl  ets.erl  file.erl  gen_server.erl  lists.erl
libs/exavmlib/lib/: CMakeLists.txt  Code.ex  Macro.Env.ex  Module.ParallelChecker.ex  String.Tokenizer.ex
src/libAtomVM/: interop.c  nifs.c  nifs.gperf
tests/: test.c
tests/erlang_tests/: CMakeLists.txt  README.md  bif_abs.erl  test_binary_match.erl  vm_guards.erl
tests/libs/estdlib/: tests.erl
